--- a/requirementslama.txt
+++ b/requirementslama.txt
@@ -1,3 +1,4 @@
+# Bottleneck==1.3.4
 brotlipy==0.7.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -11,6 +12,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 joblib==1.1.0
 MarkupSafe==2.0.1
+mkl-fft==1.3.1
 mkl-random==1.2.2
 mkl-service==2.4.0
 numexpr==2.8.1
